--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -41,6 +41,7 @@ target_link_libraries(${PROJECT_NAME}
   SceCtrlForDriver_stub
   SceIofilemgrForDriver_stub
   SceSblAIMgrForDriver_stub
+  SceDisplayForDriver_stub
 )
 
 vita_create_self(${PROJECT_NAME}.skprx ${PROJECT_NAME}
