main: Redo ProcEvent checks

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,6 +42,7 @@ target_link_libraries(${PROJECT_NAME}
   SceIofilemgrForDriver_stub
   SceSblAIMgrForDriver_stub
   SceDisplayForDriver_stub
+  SceSblACMgrForDriver_stub
 )
 
 vita_create_self(${PROJECT_NAME}.skprx ${PROJECT_NAME}
